--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.gitignore.io/api/django,python,virtualenv
 # Edit at https://www.gitignore.io/?templates=django,python,virtualenv
 
+.DS_Store
+
 ### Django ###
 *.log
 *.pot
