--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
+certifi==2019.3.9
+chardet==3.0.4
 Django==2.2
 django-rest-framework==0.1.0
 djangorestframework==3.9.2
 gunicorn==19.9.0
+idna==2.8
 psycopg2-binary==2.8.2
 pytz==2019.1
+requests==2.21.0
 sqlparse==0.3.0
+urllib3==1.24.2
