--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ local_settings.py
 db.sqlite3
 media
 
+# Visual Studio Settings
+
+/.vscode/
+
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
@@ -111,6 +115,7 @@ celerybeat-schedule
 
 # Environments
 .env
+.envrc
 .venv
 env/
 venv/
