--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,10 @@ db.sqlite3
 media
 
 # Visual Studio Settings
-
+.vscode/
 /.vscode/
+.vscode/settings.json
+/.vscode/settings.json
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
